--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,7 @@
 
 %% Common project dependencies.
 {deps, [
-    {dmsl, {git, "git@github.com:rbkmoney/damsel_erlang.git", {branch, "master"}}}
+    {damsel, {git, "git@github.com:rbkmoney/damsel.git", {branch, "release/erlang/master"}}}
 ]}.
 
 %% XRef checks
