--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,7 @@
 
 %% Common project dependencies.
 {deps, [
-    {damsel, {git, "git@github.com:rbkmoney/damsel.git", {branch, "release/erlang/master"}}}
+    {damsel, {git, "https://github.com/rbkmoney/damsel.git", {branch, "release/erlang/master"}}}
 ]}.
 
 %% XRef checks
