--- a/rebar.config
+++ b/rebar.config
@@ -56,3 +56,12 @@
 {pre_hooks, [
     {thrift, "git submodule update --init"}
 ]}.
+
+{plugins, [
+    {erlfmt, "0.8.0"}
+]}.
+
+{erlfmt, [
+    {print_width, 120},
+    {files, "{src,include,test}/*.{hrl,erl}"}
+]}.
